BlueToolTestforJoy/blue_dir/include/TestE2.h

typedef unsigned char  uint8;
typedef unsigned short uint16;
typedef signed long int int32;
TESTE2_API(void) te2GetVersion(char* versionStr);
TESTE2_API(int32) te2Open(int32 transport, int32 port, int32 device);
TESTE2_API(int32) te2OpenSpiUnlock(int32 transport, int32 port, int32 device,
                                   const char* unlockKey);
TESTE2_API(int32) te2OpenTrans(const char *trans);
TESTE2_API(int32) te2OpenSpiUnlockTrans(const char *trans,
                                        const char* unlockKey);
TESTE2_API(void) te2Close(void);
TESTE2_API(int32) te2GetDetectedDevices(uint16* devices);
TESTE2_API(int32) te2GetFailedDevices(uint16* devices);
TESTE2_API(uint8) te2IsBusy(void);
TESTE2_API(int32) te2Program(const char * filename, uint8 wait);
TESTE2_API(int32) te2ProgramBroad(const char * filename, uint16 devices, 
                                    uint8 wait);
TESTE2_API(int32) te2Fill(uint16 value, uint8 wait);
TESTE2_API(int32) te2FillBroad(uint16 value, uint16 devices, uint8 wait);
TESTE2_API(int32) te2Dump(const char * filename, uint8 wait);
TESTE2_API(int32) te2GetSize(uint16* size);
TESTE2_API(int32) te2GetInfo(uint16* devSelect, uint16* byteAddr);
TESTE2_API(int32) te2SetI2cPios(uint8 sda, uint8 scl, uint8 wp);
TESTE2_API(int32) te2WriteBcHeader(void);
TESTE2_API(int32) te2GetResult(void);
TESTE2_API(const char *) te2GetLastError(void);
TESTE2_API(int32) te2GetAvailableSpiPorts(uint16* maxLen, char* ports, 
                                            char* trans, uint16* count);
TESTE2_API(int32) te2Verify(const char * filename, uint8 wait);