BlueToolTestforJoy/blue_dir/include/Delphi/TestE2API.pas

{ TestE2API.pas : Declares the DLL functions for Delpi. }
{ Generated by C:\work_bluesuite_2_5\p4\common\hosttools\bluesuite_2_5\prodtest\scripts\extract_tt_api.pl from TestE2.h;  at 03/02/14 - 11:36:28 }

unit TestE2API;

interface

procedure te2GetVersion( versionStr: PChar); stdcall; external 'TestE2.dll' ;
function te2Open( transport: Integer;  port: Integer;  device: Integer): Integer; stdcall; external 'TestE2.dll' ;
function te2OpenSpiUnlock( transport: Integer;  port: Integer;  device: Integer;  unlockKey: PChar): Integer; stdcall; external 'TestE2.dll' ;
function te2OpenTrans( trans: PChar): Integer; stdcall; external 'TestE2.dll' ;
function te2OpenSpiUnlockTrans( trans: PChar;  unlockKey: PChar): Integer; stdcall; external 'TestE2.dll' ;
procedure te2Close(); stdcall; external 'TestE2.dll' ;
function te2GetDetectedDevices(var devices: Word): Integer; stdcall; external 'TestE2.dll' ;
function te2GetFailedDevices(var devices: Word): Integer; stdcall; external 'TestE2.dll' ;
function te2IsBusy(): Byte; stdcall; external 'TestE2.dll' ;
function te2Program( filename: PChar;  wait: Byte): Integer; stdcall; external 'TestE2.dll' ;
function te2ProgramBroad( filename: PChar;  devices: Word;  wait: Byte): Integer; stdcall; external 'TestE2.dll' ;
function te2Fill( value: Word;  wait: Byte): Integer; stdcall; external 'TestE2.dll' ;
function te2FillBroad( value: Word;  devices: Word;  wait: Byte): Integer; stdcall; external 'TestE2.dll' ;
function te2Dump( filename: PChar;  wait: Byte): Integer; stdcall; external 'TestE2.dll' ;
function te2GetSize(var size: Word): Integer; stdcall; external 'TestE2.dll' ;
function te2GetInfo(var devSelect: Word; var byteAddr: Word): Integer; stdcall; external 'TestE2.dll' ;
function te2SetI2cPios( sda: Byte;  scl: Byte;  wp: Byte): Integer; stdcall; external 'TestE2.dll' ;
function te2WriteBcHeader(): Integer; stdcall; external 'TestE2.dll' ;
function te2GetResult(): Integer; stdcall; external 'TestE2.dll' ;
function te2GetLastError(): PChar; stdcall; external 'TestE2.dll' ;
function te2GetAvailableSpiPorts(var maxLen: Word;  ports: PChar;  trans: PChar; var count: Word): Integer; stdcall; external 'TestE2.dll' ;
function te2Verify( filename: PChar;  wait: Byte): Integer; stdcall; external 'TestE2.dll' ;

implementation

end.
